--- a/style.css
+++ b/style.css
@@ -186,3 +186,48 @@ body {
     padding: 0.5%;
     font-size: 2vw;
 }
+
+.tableBox {
+    display: table;
+    position: absolute;
+    height: 80%;
+    width: 100%;
+}
+
+.outerLoginBox {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.loginBox {
+    display: flex;
+    text-shadow: 0.5px 0.5px 0.5px black;
+    color: #A3D9FF;
+    background-color: #7E6B8F;
+    border: 4px inset #46303a;
+    border-radius: 8px;
+    width: 50%;
+    height: 40%;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.loginButton {
+    display: flex;
+    justify-content: center;
+    margin: auto 2%;
+    padding: 5px;
+    border: 3px outset lightgray;
+    border-radius: 8px;
+    width: 10%;
+    height: auto;
+    text-shadow: 0.5px 0.5px 0.5px black;
+    background-color: #845A6D;
+}
+
+.loginButton:hover {
+    cursor: pointer;
+    text-shadow: 1px 1px 1px darkgrey;
+}
