working login with ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 
     <!-- My styling -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="./images/favicon.ico">
@@ -39,14 +39,13 @@
     <div class="board">
         <div class="tableBox">
             <div class="outerLoginBox">
-
-                <div class="loginBox">
-                    <div>
-                        <label>Username: <input id="username" type="text"></label><br>
-                        <label>Password: &nbsp<input id="password" type="password"></label><br>
+                    <div class="loginBox">
+                        <div>
+                            <label>Username: <input id="username" name="name" type="text"></label><br>
+                            <label>Password: &nbsp<input id="password" name="hashed_password" type="password"></label><br>
+                        </div>
+                        <div id="login" class="loginButton">Login</div>
                     </div>
-                    <div id="login" class="loginButton">Login</div>
-                </div>
 
             </div>
         </div>
