register login and hiscores all working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,6 +39,7 @@
     <div class="board">
         <div class="tableBox">
             <div class="outerLoginBox">
+                <form action="/session" method="POST">
                     <div class="loginBox">
                         <div>
                             <label>Username: <input id="username" name="name" type="text"></label><br>
@@ -46,6 +47,7 @@
                         </div>
                         <div id="login" class="loginButton">Login</div>
                     </div>
+                </form>
 
             </div>
         </div>
