--- a/views/gameBoard.ejs
+++ b/views/gameBoard.ejs
@@ -93,8 +93,38 @@
         </div>
         <footer class="stickyFooter">
             <div class="score">
-                <div>Score: <span id="scoreSpan"></span></div>
-                <div>Streak: <span id="scoreStreakSpan"></span></div>
+                <div>Score: <span class="scoreNumbers" id="scoreSpan"></span></div>
+                <div>Streak: <span class="scoreNumbers" id="scoreStreakSpan"></span></div>
+                <table class="hiScoreTable">
+                    <tr class="headerRow">
+                        <th>User</th>
+                        <th>Score</th>
+                    </tr>
+                    <tr class="scoreRow">
+                        <td>
+                            <span class="scoreNumbers" id="firstPlace"></span>
+                        </td>
+                        <td>
+                            <span class="scoreNumbers" id="firstPlaceScore"></span>
+                        </td>
+                    </tr>
+                    <tr class="scoreRow">
+                        <td>
+                            <span class="scoreNumbers" id="secondPlace"></span>
+                        </td>
+                        <td>
+                            <span class="scoreNumbers" id="secondPlaceScore"></span>
+                        </td>
+                    </tr>
+                    <tr class="scoreRow">
+                        <td>
+                            <span class="scoreNumbers" id="thirdPlace"></span>
+                        </td>
+                        <td>
+                            <span class="scoreNumbers" id="thirdPlaceScore"></span>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </footer>
     </div>
