--- a/views/style.css
+++ b/views/style.css
@@ -173,7 +173,7 @@ body {
 }
 
 .score {
-    margin-left: 70%;
+    margin-left: 66%;
     left: 0;
     right: 0;
     background-color: #7E6B8F;
@@ -235,17 +235,35 @@ th {
 .loginButton {
     display: flex;
     justify-content: center;
-    margin: auto 2%;
+    margin: auto 8% auto 2%;
     padding: 5px;
     border: 3px outset lightgray;
     border-radius: 8px;
-    width: 10%;
+    width: 15%;
     height: auto;
     text-shadow: 0.5px 0.5px 0.5px black;
     background-color: #845A6D;
+    font-size: 2.3vw;
 }
 
 .loginButton:hover {
     cursor: pointer;
     text-shadow: 1px 1px 1px darkgrey;
+}
+
+.registerText {
+    font-size: 2.4vw;
+    text-align: center;
+}
+
+.verticalLine {
+    border-left: 2px solid #46303a;
+    padding-left: 2.5vw;
+}
+
+.errorBox {
+    color: maroon;
+    text-shadow: 1px 1px 1px black;
+    text-align: center;
+    font-size: 3vw;
 }
